issue #20618 fixed In "New Cart Price Rule" page tooltip icon is not properly aligned
issue #20618 fixed In "New Cart Price Rule" page tooltip icon is not properly aligned

--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_store-scope.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_store-scope.less
@@ -34,11 +34,4 @@
     }
 }
 
-.store-scope {
-    .admin__legend {
-        .admin__field-tooltip {
-            margin-left: -@indent__base;
-            margin-top: -.2rem;
-        }
-    }
-}
+
